<resources>
    <string name="app_name">Movies Catalogue</string>
    <string name="favorites_list">Favorites List</string>
    <string name="delete_all_favorites">Delete All Favorites</string>
    <string name="movie_poster_image">MoviePoster</string>
    <string name="movie_title">Movie</string>
    <string name="director_name">Director</string>
    <string name="release_date">Release Date</string>
    <string name="movie_plot">Plot</string>
    <string name="add_to_favorites_button">Add to Favorites</string>
    <string name="remove_from_favorites_button">Remove from Favorites</string>
</resources>