<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MovieInfoActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/movieTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster_image" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/movie_title"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posterImage"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textSize="24sp">
        </TextView>

        <TextView
            android:id="@+id/director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/director_name"
            android:textAlignment="center"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieTitle"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textStyle="italic"
            android:padding="5dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/director"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textSize="20sp">
        </TextView>

                <TextView
                    android:id="@+id/plot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="500dp"
                    android:padding="10dp"
                    android:text="@string/movie_plot"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textSize="20sp"
                    app:flow_horizontalAlign="center"
                    app:flow_verticalAlign="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/releaseDate" />

        <Button
            android:id="@+id/addToFavorites"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/add_to_favorites_button"
            android:backgroundTint="@color/green"
            app:layout_constraintTop_toBottomOf="@id/plot"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/removeFromFavorites"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/remove_from_favorites_button"
            android:backgroundTint="@color/red"
            app:layout_constraintTop_toBottomOf="@id/plot"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

